Basic calculator working

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lan": "expo start --lan"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "expo": "~52.0.35",
     "expo-status-bar": "~2.0.1",
+    "mathjs": "^14.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
